# tp1-distributed-systems

./: .gitignore  CMakeLists.txt  README.md  run.sh  setup.sh
client/: CMakeLists.txt
client/Source Files/: main.cpp
client/src/: NeighborsReleased.cpp  main.cpp
lamport/: CMakeLists.txt  lamport.cpp  lamport.hpp
libs/lamport/: CMakeLists.txt
libs/lamport/include/: lamport.hpp
libs/lamport/src/: lamport.cpp
proto/: CMakeLists.txt
proto/myproto/: protocol.proto
server/: CMakeLists.txt
server/Source Files/: main.cpp
server/src/: main.cpp
